# skills-manager

./: .gitignore  .markdownlint.json  CHANGELOG.md  README.md  task-book.md  tech-design.md  zuichu-v0.1-archived.txt
.github/workflows/: ci.yml  release.yml
docs/: reference-skills-manager-xkl.md
skills-manager-prototype/: .gitignore  CLAUDE.md  IMPROVEMENTS.md  README.md  desktop_launcher.py  pyproject.toml
skills-manager-prototype/.github/workflows/: ci.yml  release.yml
skills-manager-prototype/desktop/: __main__.py  app.py  components.py  dialogs.py  main.py  prototype.py  theme.py
skills-manager-prototype/desktop/pages/: browse.py  detail.py  editor.py  export.py  import.py  import_page.py  mcp.py  profiles.py  recommend.py  settings.py
skills-manager-prototype/docs/: user-guide.md
skills-manager-prototype/examples/code-generator/: SKILL.md
skills-manager-prototype/examples/code-reviewer/: SKILL.md
skills-manager-prototype/examples/interview-prep/: SKILL.md
skills-manager-prototype/examples/json-formatter/: SKILL.md
skills-manager-prototype/examples/skillfmt-manager/: SKILL.md
skills-manager-prototype/examples/translator/: SKILL.md
skills-manager-prototype/installer/: setup.nsi
skills-manager-prototype/pyinstaller/: cli_launcher.py  desktop_launcher.py
skills-manager-prototype/src/skills_manager/: __init__.py  agent_config.py  claude_code_checker.py  cli.py  frontmatter.py  ir.py  logging.py  mcp_config.py  packager.py  parser.py  recommend.py  security.py  store.py  translator.py  updater.py  validator.py
skills-manager-prototype/src/skills_manager/adapters/: __init__.py  base.py  claude.py  gemini.py  json_schema.py  mcp.py  openai.py
skills-manager-prototype/src/skills_manager/server/: __init__.py  api.py  mcp_server.py
skills-manager-prototype/src/skills_manager/store/: __init__.py  agent_sync.py  category.py  core.py  history.py  installer.py  profile.py  scanner.py  translation.py
skills-manager-prototype/tests/: conftest.py  test_adapters.py  test_agent_config.py  test_claude_code_checker.py  test_cli.py  test_frontmatter.py  test_logging.py  test_mcp_config.py  test_packager.py  test_parser.py  test_recommend.py  test_security.py  test_server.py  test_store.py  test_store_updates.py  test_translator.py  test_updater.py  test_validator.py
skills-manager-prototype/tests/fixtures/sample-skill/: SKILL.md
skills/arch/: SKILL.md
(+81 files in other folders)
