[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skills-manager"
version = "0.1.0"
description = "AI Skill 格式转换与管理工具"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
remote = ["httpx>=0.24.0"]
recommend = ["jieba>=0.42.1"]

[project.scripts]
skills = "skills_manager.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/skills_manager"]
