[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillfmt"
version = "0.1.4"
description = "AI Skill 格式转换与管理工具 — 写一次定义，导出到所有主流 AI 平台"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Skills Manager Team"}
]
keywords = ["ai", "skill", "openai", "claude", "gemini", "mcp", "tool", "function-calling", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/Miasakiii/skills-manager"
Repository = "https://github.com/Miasakiii/skills-manager"
Issues = "https://github.com/Miasakiii/skills-manager/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
remote = ["httpx>=0.24.0"]
server = ["mcp>=1.0.0", "fastapi>=0.100.0", "uvicorn>=0.23.0"]

[project.scripts]
skillfmt = "skills_manager.cli:app"
skills = "skills_manager.cli:app"

[tool.coverage.run]
omit = [
    "*/desktop/*",
    "*/pyinstaller/*",
    "*/server/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skills_manager"]
